--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "uuid-wasm",
-    "version": "0.1.4",
+    "version": "0.1.6",
     "description": "A WebAssembly implementation of UUID v1 generator and parser",
     "main": "main.js",
     "scripts": {
@@ -9,19 +9,21 @@
         "lint": "eslint .",
         "compile": "tsc -p .",
         "build": "npm run clean && npm run asm && tsc -p tsconfig.cjs.json && tsc -p tsconfig.esm.json && tsc -p tsconfig.types.json && cp package.json built/package.json && npm run clone_wasm && npm run add_package && npm run clone_lic_readme",
-        "asm": "wat2wasm ./src/uuid.wat -o ./src/uuid.wasm",
-        "clone_wasm": "cp src/uuid.wasm built/esm && cp src/uuid.wasm built/cjs",
+        "asm": "wat2wasm ./src/gen.wat -o ./src/gen.wasm && wat2wasm ./src/parse.wat -o ./src/parse.wasm",
+        "clone_wasm": "cp src/gen.wasm built/esm && cp src/gen.wasm built/cjs && cp src/parse.wasm built/esm && cp src/parse.wasm built/cjs",
         "clone_lic_readme": "cp README.md built && cp LICENSE built",
         "add_package": "echo '{\"type\": \"module\"}' > built/esm/package.json && echo '{\"type\": \"commonjs\"}' > built/cjs/package.json",
         "start": "npm run compile && npm run asm && node --experimental-wasi-unstable-preview1  ./built/test.js ",
         "patch": "npm --no-git-tag-version version patch"
     },
     "exports": {
-        "./*": {
-            "types": "./types/*.d.ts",
-            "require": "./cjs/*.js",
-            "import": "./esm/*.js",
-            "default": "./esm/*.js"
+        ".": {
+            "node": {
+                "types": "./types/main.d.ts",
+                "import": "./esm/main.js",
+                "require": "./cjs/main.js"
+            },
+            "default": "./esm/main.js"
         }
     },
     "typesVersions": {
