--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "uuid-wasm",
-    "version": "0.2.2",
+    "version": "0.3.0",
     "description": "A WebAssembly implementation of UUID v1 generator and parser",
     "main": "main.js",
     "scripts": {
@@ -8,9 +8,9 @@
         "pret": "prettier --write .",
         "lint": "eslint .",
         "compile": "tsc -p .",
-        "build": "npm run clean && npm run asm && tsc -p tsconfig.cjs.json && tsc -p tsconfig.esm.json && tsc -p tsconfig.types.json && cp package.json built/package.json && npm run clone_wasm && npm run add_package && npm run clone_lic_readme",
+        "build": "npm run clean && npm run asm && npm run insert_wasm && tsc -p tsconfig.cjs.json && tsc -p tsconfig.esm.json && tsc -p tsconfig.types.json && cp package.json built/package.json && npm run add_package && npm run clone_lic_readme",
         "asm": "wat2wasm ./src/gen.wat -o ./src/gen.wasm && wat2wasm ./src/parse.wat -o ./src/parse.wasm",
-        "clone_wasm": "cp src/gen.wasm built/esm && cp src/gen.wasm built/cjs && cp src/parse.wasm built/esm && cp src/parse.wasm built/cjs",
+        "insert_wasm": "node insert_wasm.js",
         "clone_lic_readme": "cp README.md built && cp LICENSE built",
         "add_package": "echo '{\"type\": \"module\"}' > built/esm/package.json && echo '{\"type\": \"commonjs\"}' > built/cjs/package.json",
         "start": "npm run compile && npm run asm && node --experimental-wasi-unstable-preview1  ./built/test.js ",
